--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -156,7 +156,7 @@ h4 {
   background-image: url("../img/bg image 3.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center; }
+  background-position: center top; }
 
 .features > * {
   margin-inline-start: 115px; }
@@ -164,7 +164,7 @@ h4 {
 .features__header > .container {
   display: flex;
   flex-direction: column-reverse;
-  padding-block-start: 79px; }
+  padding-block-start: 81px; }
 
 .features__heading {
   margin-block-start: 0; }
